# decision-tree-id3

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  api.html  appveyor.yml  circle.yml  export.html  genindex.html  id3.html  index.html  objects.inv  py-modindex.html  requirements.txt  searchindex.js  setup.cfg  setup.py  test_run.py
ID3/: api.html  genindex.html  id3.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
ID3/_modules/: index.html
ID3/_sources/: api.rst.txt
ID3/auto_examples/: plot_template.html
_downloads/: plot_graph.ipynb  plot_graph.py  plot_template.ipynb  plot_template.py  text_plot_examples.ipynb
_modules/: index.html
_modules/id3/: export.html  id3.html
_sources/: index.rst.txt
_sources/auto_examples/: index.rst.txt  plot_graph.rst.txt  plot_template.rst.txt  text_plot_examples.rst.txt
auto_examples/: index.html  plot_graph.html  plot_template.html  text_plot_examples.html
ci_scripts/circleci/: push_doc.sh
ci_scripts/travis/: install.sh
doc/: api.html  api.rst  conf.py  export.rst  genindex.html  id3.rst  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js  tree_c45.html
doc/_downloads/: plot_classifier.ipynb  plot_classifier.py  plot_template.ipynb  plot_template.py  plot_transformer.ipynb  (+1 more)
examples/: plot_graph.py  plot_template.py  text_plot_examples.py
id3/: __init__.py  builder.py  export.py  id3.py  node.py  pruner.py  splitter.py  tree.py
skltemplate/: template.py
tests/: test_common.py  test_data.py  test_export.py  test_id3.py  test_utils.py
(+40 files in other folders)
