[metadata]
name = decision-tree-id-fork
version = 0.0.15
author = Daniel Pettersson, Otto Nordander
author_email = svaante@gmail.com, otto.nordander@gmail.com
description = A scikit-learn compatible package for id3 decision tree
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/DekwoKybon/decision-tree-id3
project_urls =
    Bug Tracker = https://github.com/DekwoKybon/decision-tree-id3/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = numpy;six;scikit-learn>=1.0
python_requires = >=3.7

[options.packages.find]
where = src
